--- a/www/index.html
+++ b/www/index.html
@@ -267,7 +267,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="MULI-SLICE">
+                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="MULTI-SLICE">
                                         <div class="item-media"><i class="f7-icons" id="history-category-new-MULTI-SLICE">folder</i></div>
                                         <div class="item-inner">
                                             <div class="item-title">MULTI-SLICE</div>
