--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -10,7 +10,7 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https: 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
 
     <!-- Required meta tags-->
     <meta charset="utf-8">
@@ -240,56 +240,11 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="TOPOGRAPHY">
-                                        <div class="item-media"><i class="f7-icons" id="history-category-new-TOPOGRAPHY">folder</i></div>
-                                        <div class="item-inner">
-                                            <div class="item-title">TOPOGRAPHY</div>
-                                            <div class="item-after"><span class="badge" id="history-category-TOPOGRAPHY">0</span></div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="SONAR">
-                                        <div class="item-media"><i class="f7-icons" id="history-category-new-SONAR">folder</i></div>
-                                        <div class="item-inner">
-                                            <div class="item-title">SONAR</div>
-                                            <div class="item-after"><span class="badge" id="history-category-SONAR">0</span></div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
                                     <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="ECG">
                                         <div class="item-media"><i class="f7-icons" id="history-category-new-ECG">folder</i></div>
                                         <div class="item-inner">
                                             <div class="item-title">ECG</div>
                                             <div class="item-after"><span class="badge" id="history-category-ECG">0</span></div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="MRI">
-                                        <div class="item-media"><i class="f7-icons" id="history-category-new-MRI">folder</i></div>
-                                        <div class="item-inner">
-                                            <div class="item-title">MRI</div>
-                                            <div class="item-after"><span class="badge" id="history-category-MRI">0</span></div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="X-RAY">
-                                        <div class="item-media"><i class="f7-icons" id="history-category-new-X-RAY">folder</i></div>
-                                        <div class="item-inner">
-                                            <div class="item-title">X-RAY</div>
-                                            <div class="item-after"><span class="badge" id="history-category-X-RAY">0</span></div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="PET">
-                                        <div class="item-media"><i class="f7-icons" id="history-category-new-PET">folder</i></div>
-                                        <div class="item-inner">
-                                            <div class="item-title">PET</div>
-                                            <div class="item-after"><span class="badge" id="history-category-PET">0</span></div>
                                         </div>
                                     </a>
                                 </li>
@@ -303,11 +258,56 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="MULI-SLICE">
+                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="MRI">
+                                        <div class="item-media"><i class="f7-icons" id="history-category-new-MRI">folder</i></div>
+                                        <div class="item-inner">
+                                            <div class="item-title">MRI</div>
+                                            <div class="item-after"><span class="badge" id="history-category-MRI">0</span></div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="MULTI-SLICE">
                                         <div class="item-media"><i class="f7-icons" id="history-category-new-MULTI-SLICE">folder</i></div>
                                         <div class="item-inner">
                                             <div class="item-title">MULTI-SLICE</div>
                                             <div class="item-after"><span class="badge" id="history-category-MULTI-SLICE">0</span></div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="PET">
+                                        <div class="item-media"><i class="f7-icons" id="history-category-new-PET">folder</i></div>
+                                        <div class="item-inner">
+                                            <div class="item-title">PET</div>
+                                            <div class="item-after"><span class="badge" id="history-category-PET">0</span></div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="SONAR">
+                                        <div class="item-media"><i class="f7-icons" id="history-category-new-SONAR">folder</i></div>
+                                        <div class="item-inner">
+                                            <div class="item-title">SONAR</div>
+                                            <div class="item-after"><span class="badge" id="history-category-SONAR">0</span></div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="TOPOGRAPHY">
+                                        <div class="item-media"><i class="f7-icons" id="history-category-new-TOPOGRAPHY">folder</i></div>
+                                        <div class="item-inner">
+                                            <div class="item-title">TOPOGRAPHY</div>
+                                            <div class="item-after"><span class="badge" id="history-category-TOPOGRAPHY">0</span></div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#history" class="item-link item-content" scan-type="history-category" scan-value="X-RAY">
+                                        <div class="item-media"><i class="f7-icons" id="history-category-new-X-RAY">folder</i></div>
+                                        <div class="item-inner">
+                                            <div class="item-title">X-RAY</div>
+                                            <div class="item-after"><span class="badge" id="history-category-X-RAY">0</span></div>
                                         </div>
                                     </a>
                                 </li>
@@ -323,6 +323,46 @@
                     <a href="#" class="link">Link 1</a>
                     <a href="#" class="link">Link 2</a>
                     -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="login-screen">
+        <div class="view">
+            <div class="page">
+                <div class="page-content login-screen-content">
+                    <div class="login-screen-title">My App</div>
+                    <form>
+                        <div class="list-block">
+                            <ul>
+                                <li class="item-content">
+                                    <div class="item-inner">
+                                        <div class="item-title label">Username</div>
+                                        <div class="item-input">
+                                            <input type="text" name="username" placeholder="Your username">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="item-content">
+                                    <div class="item-inner">
+                                        <div class="item-title label">Password</div>
+                                        <div class="item-input">
+                                            <input type="password" name="password" placeholder="Your password">
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="list-block">
+                            <ul>
+                                <li><a href="#" class="item-link list-button" id="loginBtn">Sign In</a></li>
+                            </ul>
+                            <div class="list-block-label">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
